[package]
name = "engine"
version = "0.1.0"
authors = ["Johan Backman <backman93@gmail.com>"]

[dependencies]
cgmath = "0.16"
env_logger = "0.4.3"
gfx = "0.17"
gfx_shader_watch = "0.4.0"
log = "0.4.1"
obj = "0.8.1"
roaring = "0.5.2"
specs = "0.10.0"
winit = "0.10.0"

[dev-dependencies]
quickcheck = "0.6"
quickcheck_macros = "0.6"
